# cell-id-mapper

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: build_bundled_data.py  update_mappings.py
src/cell_id_mapper/: __init__.py  cli.py  mapper.py
src/cell_id_mapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cell_id_mapper/data/: __init__.py  mappings.csv
tests/: test_mapper.py
