[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cell-id-mapper"
version = "0.1.0"
description = "Cross-reference cancer cell line IDs across DepMap, GDSC (COSMIC), and Sanger databases"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Cell ID Mapper contributors" }]
keywords = ["bioinformatics", "cancer", "cell-line", "depmap", "gdsc", "cosmic", "sanger"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
cell-id-mapper = "cell_id_mapper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
